--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vrb",
   "version": "1.0.0",
-  "description": "Viva Real Frontend Test",
+  "description": "Viva Real Backend Test",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -11,6 +11,7 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "express": "~4.13.4",
+    "lodash": "^4.15.0",
     "lodash-express": "0.0.3",
     "morgan": "~1.7.0",
     "request-promise": "^4.1.1",
@@ -18,6 +19,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "mocha": "^3.0.2"
   }
