--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,18 +5,15 @@
         "node": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "eslint:recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true
+            "experimentalObjectRestSpread": true
         },
         "sourceType": "module"
     },
     "plugins": [
-        "react"
     ],
     "rules": {
         "quotes": [
