--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "eslint": "^3.5.0",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "swagger-ui": "^2.2.3"
   }
 }
